Mostly fixed parallax issues, fixed some layout issues, added some new layout issues.

--- a/website/css/index.css
+++ b/website/css/index.css
@@ -16,78 +16,55 @@
 	margin: 0.5% 0% 0% 0.5%;
     padding: 0.5%;
 }
-body{
-	/*
-	background-color: grey;
-	background-image: url("../img/indexBG1920.jpeg");
-	background-repeat: no-repeat;
-	*/
+
+#background {
+	margin-top: 50px;
+	width: 102%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-.bg{
-	background-color: white;
-	opacity: 0.2;
-	border-radius: 0.5%
-}
-.indexTitle{
-	margin-left: 2%;
-}
-
-.showcaseImg {
-	display: block;
-	width: 100%;
-	
+#background:after {
+	content: " ";
+ 	display: block;
+  	position: absolute;
+  	height: 150%;
+  	top: 0;
+  	left: 0;
+  	right: 0;
+  	background: rgba(200, 200, 200, 0.5);
 }
 
 .showcasePanel {
-	width: 50%;
+	width: 49.5%;
 	float: left;
-	filter: blur(1px);
-  	-webkit-filter: blur(1px);
-  	height: 700px;
+	filter: blur(3px);
+  	-webkit-filter: blur(3px);
+  	height: 120%;
     background-position: left; 
 }
 
 #leftPanel {
 	background-image: url("../img/chart.jpg");
-	background-size: 100%;
+	background-size: 200%;
 	background-repeat: no-repeat;
 	background-position: 100% 30%;
-}
-
-#divider {
-	height:120%;
-	width: 0.3%;
-	background-color: white;
-	float: left;
-	z-index: 0;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 #rightPanel {
 	background-image: url("../img/datacenter.jpg");
-	background-size: 100%;
+	background-size: 200%;
 	background-repeat: no-repeat;
-	background-position: 100% 30%;
+	background-position: 10% 30%;
 }
 
-#background {
-	margin-top: 50px;
-	width: 100%;
-	position: absolute;
-	z-index: -10;
-}
-
-#background:after {
-  content: " ";
-  display: block;
-  position: absolute;
-  height: 150%;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: rgba(220, 220, 220, 0.5);
+#divider {
+	height:120%;
+	width: 0.4%;
+	background-color: white;
+	z-index: 0;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #promo {
@@ -147,10 +124,11 @@ body{
 }
 
 .demo {
+	height: 100%;
 }
 
 #demoJournal {
-	margin-top: 600px;
+	margin-top: 750px;
 	width: 100%;
 	height: 100%;
 	background-color: white;
@@ -161,12 +139,27 @@ body{
 	height: 100%;
 	background-color: black;
 	color: white;
+
+}
+
+#journalLeft {
+	color: black;
+	text-align: center;
+	padding-top: 50px;
 }
 
 #journalRight {
 	background-image: url("https://www.tradervue.com/assets/feat-journal-dashboard-f67e6bd9666d7cdc7ff47144c8e4270f6eb42a62541883e7b00a37ec2667bfdc.png");
-	
 	position: relative;
+}
+
+#datacenterLeft {
+
+}
+
+#datacenterRight {
+	text-align: center;
+	padding-top: 50px;
 }
 
 .demoHalves {
@@ -177,31 +170,33 @@ body{
 }
 
 .parallax {
-  perspective: 150px;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-  scroll-behavior: smooth;
+  	perspective: 300px;
+  	height: 100vh;
+  	overflow-x: hidden;
+  	overflow-y: auto;
+  	scroll-behavior: smooth;
 
 }
 .parallax__layer {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  	position: absolute;
+  	top: 0;
+  	right: 0;
+  	bottom: 0;
+  	left: 0;
+  /*transform-style: preserve-3d;*/
 }
 
 .parallax__layer--base {
-  transform: translateZ(0);
+	-webkit-transform: translateZ(0);
+  	transform: translateZ(0);
 }
 
 .parallax__layer--back {
-  transform: translateZ(-2px) scale(3);
+	-webkit-transform: translateZ(-300px) scale(2);
+  	transform: translateZ(-300px) scale(2);
 }
 
 .parallax__layer--front {
     -webkit-transform: translateZ(90px) scale(.7);
     transform: translateZ(90px) scale(.7);
-    z-index: 1;
 }
